# procon_lib_rs

./: .gitignore  Cargo.toml  README.md  env.sh  index.md  pre-commit  rust-toolchain.toml
.github/workflows/: gen-docs.yml  jekyll-gh-pages.yml  verify.yml
.verify-helper/: timestamps.remote.json
.verify-helper/docs/: index.md
cargo-doc/: .rustc_info.json  help.html  search-index.js  settings.html
cargo-doc/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
cargo-doc/dynamic_modint/: index.html
cargo-doc/hld/: all.html
cargo-doc/maxflow_lower_bound/: index.html  struct.MaxFlowLowerBound.html
cargo-doc/ntt/: index.html
cargo-doc/ntt_arbitrary_mod/: index.html
cargo-docs/: .rustc_info.json
crates/algebra/: Cargo.toml
crates/bitset/: Cargo.toml
crates/data_structure/range_chmin_max_add_sum/: Cargo.toml
crates/data_structure/range_chmin_max_add_sum/src/: lib.rs  lib.rs.md
crates/data_structure/range_chminmax_addsum/: Cargo.toml
crates/data_structure/range_chminmax_addsum/src/: lib.rs  lib.rs.md
crates/data_structure/segtree/: Cargo.toml
crates/data_structure/segtree/src/: lib.rs  lib.rs.md
crates/data_structure/segtree_2d_compressed/: Cargo.toml
crates/data_structure/segtree_2d_compressed/src/: lib.rs  lib.rs.md
crates/flow/maxflow/: Cargo.toml
crates/flow/maxflow/src/: lib.rs  lib.rs.md
crates/flow/maxflow_lower_bound/: Cargo.toml
crates/flow/maxflow_lower_bound/src/: lib.rs  lib.rs.md
crates/fps/fps_utils/: Cargo.toml
crates/fps/fps_utils/src/: lib.rs  lib.rs.md
crates/fps/ntt_arbitrary_mod/: Cargo.toml
crates/fps/ntt_arbitrary_mod/src/: lib.rs  lib.rs.md
crates/math/bit_matrix/: Cargo.toml
crates/math/bit_matrix/src/: lib.rs  lib.rs.md
crates/math/bitwise_convolution/: Cargo.toml
crates/math/bitwise_convolution/src/: lib.rs  lib.rs.md
crates/math/enumerate_inv_mods/: Cargo.toml
crates/math/enumerate_inv_mods/src/: lib.rs  lib.rs.md
crates/modint/dynamic_modint/: Cargo.toml
crates/modint/dynamic_modint/src/: lib.rs  lib.rs.md
crates/modint/static_modint/: Cargo.toml
crates/modint/static_modint/src/: lib.rs  lib.rs.md
crates/string/rolling_hash/: Cargo.toml
crates/string/rolling_hash/src/: lib.rs  lib.rs.md
crates/succint/wavelet_matrix/: Cargo.toml
crates/succint/wavelet_matrix/src/: lib.rs  lib.rs.md
crates/wavelet/bitvec/: Cargo.toml
crates/wavelet/bitvec/benches/: my_benchmark.rs.md
crates/wavelet/bitvec/src/: lib.rs.md
crates/wavelet/wavelet_matrix_fenwick/: Cargo.toml
crates/wavelet/wavelet_matrix_fenwick/src/: lib.rs  lib.rs.md
crates/wavelet/wavelet_matrix_rect_sum/: Cargo.toml
crates/wavelet/wavelet_matrix_rect_sum/src/: lib.rs  lib.rs.md
crates/wavelet/wavelet_matrix_segtree/: Cargo.toml
crates/wavelet/wavelet_matrix_segtree/src/: lib.rs  lib.rs.md
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc/algebra/: all.html  index.html  sidebar-items.js  trait.Action.html  trait.ActionMonoid.html  trait.Commutative.html  trait.Group.html  trait.IdempotentMonoid.html  trait.Monoid.html  trait.NonCommutative.html  trait.Semiring.html
doc/atcoder_mincostflow/: all.html  index.html  struct.MinCostFlowEdge.html  struct.MinCostFlowGraph.html
doc/atcoder_string/: all.html  fn.lcp_array.html  fn.lcp_array_arbitrary.html  fn.suffix_array.html  fn.suffix_array_arbitrary.html  fn.suffix_array_manual.html  fn.z_algorithm.html  fn.z_algorithm_arbitrary.html  index.html
doc/auxiliary_tree/: all.html  index.html  struct.AuxiliaryTree.html
doc/avl/: all.html  index.html  sidebar-items.js  struct.AVL.html  struct.Iter.html
doc/binom/: all.html  index.html  sidebar-items.js  struct.Binom.html
doc/bit_matrix/: all.html  fn.add.html  index.html  sidebar-items.js  struct.BitMatrix.html  struct.PlusOrMulAnd.html  struct.PlusXorMulAnd.html  trait.BitMatrixOps.html
doc/bitdict/: all.html  index.html  sidebar-items.js  struct.BitDict.html
doc/bitset/: all.html  index.html  struct.BitSet.html
doc/bitvec/: all.html  index.html  struct.BitVec.html
doc/bitwise_convolution/: all.html  fn.bitwise_and_convolution.html  fn.bitwise_or_convolution.html  fn.bitwise_xor_convolution.html  fn.fast_hadamard.html  fn.inv_fast_hadamard.html  index.html  sidebar-items.js
doc/capture/: all.html  index.html  macro.crecurse.html  macro.memorize.html  sidebar-items.js
doc/cartesian_tree/: all.html  index.html  struct.CartesianTree.html
doc/centroid_decomposition/: all.html  index.html  sidebar-items.js  struct.CentroidDecomposition.html
doc/cht_offline/: all.html  enum.MaxCompare.html  enum.MinCompare.html  fn.add.html  index.html  sidebar-items.js  struct.CHTOffline.html  trait.Compare.html
doc/convex_hull/: all.html  fn.calc_farthest_point_pair.html  fn.monotone_chain.html  index.html  sidebar-items.js  struct.Point.html
doc/doubling/: all.html  index.html  struct.Doubling.html
doc/dual_segtree/: all.html  index.html  struct.DualSegTree.html
doc/dynamic_lazy_segtree/: all.html  index.html  sidebar-items.js  struct.DynamicLazySegTree.html
doc/dynamic_modint/: all.html  index.html  macro.define_modint.html  (+5 more)
template/: Cargo.toml
verify/AOJ/dsl_2d_dual_seg/: Cargo.toml
verify/AOJ/dsl_2d_dual_seg/src/: main.rs  main.rs.md
verify/AOJ/dsl_2h_lazy_seg_commutative/: Cargo.toml
verify/AOJ/dsl_2h_lazy_seg_commutative/src/: main.rs  main.rs.md
verify/AOJ/dual_seg_tree_verify/: Cargo.toml
verify/AOJ/dual_seg_tree_verify/src/: main.rs
verify/AOJ/no1068/: Cargo.toml
verify/AOJ/no1068/src/: main.rs  main.rs.md
verify/AOJ/no2842/: Cargo.toml
verify/AOJ/no2842/src/: main.rs  main.rs.md
verify/AOJ/no_1068/: Cargo.toml
verify/AOJ/no_1068/src/: main.rs  main.rs.md
verify/AtCoder/abc222f/: Cargo.toml
verify/AtCoder/abc222f/src/: main.rs  main.rs.md
verify/AtCoder/abc285g/: Cargo.toml
verify/AtCoder/abc285g/src/: main.rs  main.rs.md
verify/AtCoder/abc290f/: Cargo.toml
verify/AtCoder/abc290f/src/: main.rs  main.rs.md
verify/AtCoder/abc291g/: Cargo.toml
verify/AtCoder/abc291g/src/: main.rs  main.rs.md
(+1612 files in other folders)
