[workspace]
members = [
    "crates/internals/*",
    "crates/string/*",
    "crates/data_structure/*",
    "crates/algebra",
    "crates/fps/*",
    "crates/modint/*",
    "crates/flow/*",
    "crates/tree/*",
    "crates/misc/*",
    "crates/math/*",
    "crates/hash/*",
    "crates/graph/*",
    "verify/yosupo/*",
    "verify/AOJ/*",
    "verify/AtCoder/*",
    "verify/yukicoder/*"
]
resolver = "2"