[workspace]
members = [
    "crates/internals/*",
    "crates/string/*",
    "crates/data_structure/*",
    "crates/wavelet/*",
    "crates/algebra",
    "crates/bitset",
    "crates/fps/*",
    "crates/modint/*",
    "crates/flow/*",
    "crates/tree/*",
    "crates/misc/*",
    "crates/math/*",
    "crates/hash/*",
    "crates/graph/*",
    "crates/rand/*",
    "crates/itertools/*",
    "crates/tools/*",
    "crates/geometry/*",
    "verify/yosupo/*",
    "verify/AOJ/*",
    "verify/AtCoder/*",
    "verify/yukicoder/*",
]
exclude = ["template"]
resolver = "2"