[package]
name = "range_chminmax_addsum"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
authors = ["CoCo-Japan-pan"]
repository = "https://github.com/CoCo-Japan-pan/procon_lib_rs.git"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_segtree_beats = { path = "../lazy_segtree_beats" }

[dev-dependencies]
rand = "0.8.5"