[package]
name = "fps_utils"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
authors = ["CoCo-Japan-pan"]
repository = "https://github.com/CoCo-Japan-pan/procon_lib_rs.git"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntt = { path = "../ntt" }
internal_bits = { path = "../../internals/internal_bits" }
enumerate_inv_mods = { path = "../../math/enumerate_inv_mods" }

[dev-dependencies]
rand = "0.8.5"
matrix = { path = "../../math/matrix" }
static_modint = {  path = "../../modint/static_modint" }