[package]
name = "ntt_arbitrary_mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modint_traits = { path = "../../internals/modint_traits" }
static_modint = { path = "../../modint/static_modint" }
ntt = { path = "../ntt" }