[package]
name = "enumerate_inv_mods"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
authors = ["CoCo-Japan-pan"]
repository = "https://github.com/CoCo-Japan-pan/procon_lib_rs.git"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internal_modint = { path = "../../internals/internal_modint" }

[dev-dependencies]
static_modint = { path = "../../modint/static_modint" }