[package]
name = "rolling_hash"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/qryxip/competitive-programming-library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modint_mersenne = { path = "../../internals/modint_mersenne" }