[package]
name = "rolling_hash"
version = "0.1.0"
edition = "2021"
repository = "ssh://git@github.com/CoCo-Japan-pan/procon_lib_rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modint_mersenne = { path = "../../internals/modint_mersenne" }