[package]
name = "wavelet_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { path = "../bitvec" }
internal_bits = { path = "../../internals/internal_bits" }

[dev-dependencies]
rand = "0.8.5"