[package]
name = "bitvec"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
repository = "ssh://git@github.com/CoCo-Japan-pan/procon_lib_rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
# https://docs.rs/crate/criterion/latest
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false