[package]
name = "wavelet_matrix_rect_sum"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
repository = "ssh://git@github.com/CoCo-Japan-pan/procon_lib_rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { path = "../bitvec" }
internal_bits = { path = "../../internals/internal_bits" }
internal_type_traits = { path = "../../internals/internal_type_traits" }

[dev-dependencies]
rand = "0.8.5"