[package]
name = "dsl_2d_dual_seg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
dual_segtree = { path = "../../../crates/data_structure/dual_segtree" }
algebra = { path = "../../../crates/algebra" }