[package]
name = "dsl_2h_lazy_seg_commutative"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
algebra = { path = "../../../crates/algebra" }
lazy_segtree = { path = "../../../crates/data_structure/lazy_segtree" }