[package]
name = "no_1068"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
algebra = { path = "../../../crates/algebra" }
sparse_table_on_segtree = { path = "../../../crates/data_structure/sparse_table_on_segtree" }