[package]
name = "abc222f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
rerooting = { path = "../../../crates/tree/rerooting" }
algebra = { path = "../../../crates/algebra" }
rustc-hash = "1.1.0"