[package]
name = "abc285g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
itertools = "=0.11.0"
maxflow_lower_bound = { path = "../../../crates/flow/maxflow_lower_bound" }