[package]
name = "abc291g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
itertools = "=0.11.0"
capture = { path = "../../../crates/tools/capture" }
centroid_decomposition = { path = "../../../crates/tree/centroid_decomposition" }